@@ -1,6 +1,7 @@
 13 Jan 2004 mipsator
  * improved pmkpc to not care about argument order (like pkg-config).
  * added support for multiple module.
+ * moved get_file_path() from functool to common.
 
 12 Jan 2004 mipsator
  * imported preliminary code for our pkg-config alternative.
